[package]
name = "historied-db"
version = "0.0.1"
authors = ["Parity Technologies <admin@parity.io>"]
description = "Trait for key value databases with history."
license = "Apache-2.0"
categories = [ "no-std" ]
repository = "https://github.com/paritytech/trie"
edition = "2018"

[dependencies]
smallvec = "1.2"
hash-db = { path = "../hash-db", default-features = false, version = "0.15.2"}

[features]
default = ["std", "test-helpers"] # TODO remove test-helpers
std = [
]
test-helpers = []
