[package]
name = "keccak-hasher"
version = "0.15.3"
authors = ["Parity Technologies <admin@parity.io>"]
description = "Keccak-256 implementation of the Hasher trait"
repository = "https://github.com/paritytech/parity/"
license = "Apache-2.0"
edition = "2018"

[dependencies]
tiny-keccak = { version = "2.0.2", features = ["keccak"] }
hash-db = { path = "../../hash-db", default-features = false, version = "0.15.2" }
hash256-std-hasher = { path = "../../hash256-std-hasher", version = "0.15.2" }
blake2 = { version = "0.10.4", default-features = false }
digest = { version = "0.10.3", default-features = false }

[features]
default = ["std"]
std = [
  "hash-db/std",
	"digest/std",
	"blake2/std",
]
